Fix taxonomies style when wrapping. (#82)

--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -33,6 +33,7 @@
 	flex-wrap: wrap;
 	list-style-type: none;
 	padding: 0;
+	row-gap: 15px;
 
 	li {
 		display: flex;
